--- a/po/tr.po
+++ b/po/tr.po
@@ -1,169 +1,224 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Gökhan Kalayci <gkmediagokhan@gmail.com>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: fcitx\n"
+"Project-Id-Version: fcitx5-skk\n"
 "Report-Msgid-Bugs-To: fcitx-dev@googlegroups.com\n"
-"POT-Creation-Date: 2014-12-08 12:40+0900\n"
+"POT-Creation-Date: 2020-05-22 12:21-0700\n"
 "PO-Revision-Date: 2017-04-20 20:34+0000\n"
 "Last-Translator: Gökhan Kalayci <gkmediagokhan@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/fcitx/fcitx/language/tr/)\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: gui/adddictdialog.cpp:35
-msgid "&Type:"
-msgstr "&Tip:"
-
-#: gui/adddictdialog.cpp:36
-msgid "&Path:"
-msgstr "&Yol:"
-
-#: gui/adddictdialog.cpp:37
+#. i18n: file: gui/adddictdialog.ui:70
+#. i18n: ectx: property (text), widget (QLabel, hostLabel)
+#: rc.cpp:12
+#, kde-format
 msgid "&Host:"
 msgstr "&Host:"
 
-#: gui/adddictdialog.cpp:38
+#. i18n: file: gui/adddictdialog.ui:42
+#. i18n: ectx: property (text), widget (QLabel, pathLabel)
+#: rc.cpp:9
+#, kde-format
+msgid "&Path:"
+msgstr "&Yol:"
+
+#. i18n: file: gui/adddictdialog.ui:80
+#. i18n: ectx: property (text), widget (QLabel, portLabel)
+#: rc.cpp:15
+#, kde-format
 msgid "&Port:"
 msgstr "&Port:"
 
-#: gui/adddictdialog.cpp:39
-msgid "System"
-msgstr "Sistem"
+#. i18n: file: gui/adddictdialog.ui:22
+#. i18n: ectx: property (text), widget (QLabel, typeLabel)
+#: rc.cpp:6
+#, kde-format
+msgid "&Type:"
+msgstr "&Tip:"
 
-#: gui/adddictdialog.cpp:40
-msgid "User"
-msgstr "Kullanıcı"
-
-#: gui/adddictdialog.cpp:41
-msgid "Server"
-msgstr "Sunucu"
-
-#: gui/adddictdialog.cpp:101 gui/adddictdialog.cpp:113
-msgid "Select Dictionary File"
-msgstr "Sözlük Dosyasını Seçin"
-
-#: gui/dictwidget.cpp:34
-msgid "&Rule:"
-msgstr "&Kural:"
-
-#: gui/dictwidget.cpp:61
-msgid "Dictionary Manager"
-msgstr "Sözlük Yönetimi"
-
-#: src/skk.c:95 src/fcitx-skk.desc:16
-msgid "Hiragana"
-msgstr "Hiragana"
-
-#: src/skk.c:96 src/fcitx-skk.desc:17
-msgid "Katakana"
-msgstr "Katakana"
-
-#: src/skk.c:97 src/fcitx-skk.desc:18
-msgid "Half width Katakana"
-msgstr "Yarı geniş Katakana"
-
-#: src/skk.c:98 src/fcitx-skk.desc:7
-msgid "Latin"
-msgstr "Latin"
-
-#: src/skk.c:99 src/fcitx-skk.desc:8 src/fcitx-skk.desc:20
-msgid "Wide latin"
-msgstr "Geniş latin"
-
-#: src/skk.c:440 src/fcitx-skk.conf.in:3 src/skk.conf.in:3
-msgid "Skk"
-msgstr "Skk"
-
-#: src/skk.c:466
-msgid "Input Mode"
-msgstr "Giriş Yöntemi"
-
-#: src/fcitx-skk.conf.in:4
-msgid "Skk Input Method For Fcitx"
-msgstr "Fcitx için Skk Giriş Yöntemi"
-
-#: src/fcitx-skk.conf.in:9
-msgid "Dictionary and Rule"
-msgstr "Sözlük ve Kural"
-
-#: src/fcitx-skk.desc:1 src/fcitx-skk.desc:11 src/fcitx-skk.desc:22
-#: src/fcitx-skk.desc:29 src/fcitx-skk.desc:34 src/fcitx-skk.desc:43
-#: src/fcitx-skk.desc:50 src/fcitx-skk.desc:55
-msgid "General"
-msgstr "Genel"
-
-#: src/fcitx-skk.desc:3
-msgid "Punctuation Style"
-msgstr "Noktalama İşareti Stili"
-
-#: src/fcitx-skk.desc:6
-msgid "Japanese"
-msgstr "Japonca"
-
-#: src/fcitx-skk.desc:9
-msgid "Wide latin Japanese"
-msgstr "Geniş latin Japonca"
-
-#: src/fcitx-skk.desc:13
-msgid "Initial Input Mode"
-msgstr "Başlangıç Giriş Modu"
-
-#: src/fcitx-skk.desc:19
-msgid "Direct input"
-msgstr "Doğrudan giriş"
-
-#: src/fcitx-skk.desc:24
-msgid "Page size"
-msgstr "Sayfa boyutu"
-
-#: src/fcitx-skk.desc:31
-msgid "Return-key does not insert new line on commit"
-msgstr "Dönüş anahtarı, tamamlandığında yeni satır eklemez"
-
-#: src/fcitx-skk.desc:36
-msgid "Candidate List Layout"
-msgstr "Aday Liste Düzeni"
-
-#: src/fcitx-skk.desc:38
-msgid "Global"
-msgstr "Küresel"
-
-#: src/fcitx-skk.desc:39
-msgid "Vertical"
-msgstr "Dikey"
-
-#: src/fcitx-skk.desc:40
-msgid "Horizontal"
-msgstr "Yatay"
-
-#: src/fcitx-skk.desc:45
-msgid "Number candidate of Triggers To Show Candidate Window"
-msgstr "Aday Penceresini Gösteren Tetikleyicilerin Aday Sayısı"
-
-#: src/fcitx-skk.desc:52
-msgid "Show Annotation"
-msgstr "Açıklamayı Göster"
-
-#: src/fcitx-skk.desc:57
-msgid "Keys to Select from Candidate Window"
-msgstr "Aday Pencereden Seçilecek Tuşlar"
-
-#: src/fcitx-skk.desc:59
-msgid "Digit (0,1,2,...)"
-msgstr "Sayısal (0,1,2,...)"
-
-#: src/fcitx-skk.desc:60
+#: src/skk.h:31
 msgid "ABC (a,b,c,...)"
 msgstr "ABC (a,b,c,...)"
 
-#: src/fcitx-skk.desc:61
+#: src/skk.h:85
+#, fuzzy
+msgid "Candidate Key"
+msgstr "Aday Liste Düzeni"
+
+#: src/skk.h:77
+#, fuzzy
+msgid "Candidate Layout"
+msgstr "Aday Liste Düzeni"
+
+#: src/skk.h:96
+#, fuzzy
+msgid "Candidates Page Down"
+msgstr "Aday Liste Düzeni"
+
+#: src/skk.h:90
+#, fuzzy
+msgid "Candidates Page Up"
+msgstr "Aday Liste Düzeni"
+
+#: src/skk.h:108
+msgid "Cursor Down"
+msgstr ""
+
+#: src/skk.h:102
+msgid "Cursor Up"
+msgstr ""
+
+#. i18n: file: gui/adddictdialog.ui:14
+#. i18n: ectx: property (windowTitle), widget (QDialog, AddDictDialog)
+#: rc.cpp:3
+#, kde-format
+msgid "Dialog"
+msgstr ""
+
+#: gui/dictwidget.cpp:51
+msgid "Dictionary Manager"
+msgstr "Sözlük Yönetimi"
+
+#: src/skk.h:30
+msgid "Digit (0,1,2,...)"
+msgstr "Sayısal (0,1,2,...)"
+
+#: src/skk.cpp:72 src/skk.h:42
+msgid "Direct input"
+msgstr "Doğrudan giriş"
+
+#. i18n: file: gui/dictwidget.ui:14
+#. i18n: ectx: property (windowTitle), widget (QWidget, SkkDictWidget)
+#: rc.cpp:21
+#, kde-format
+msgid "Form"
+msgstr ""
+
+#: src/skk.cpp:69 src/skk.h:41
+msgid "Half width Katakana"
+msgstr "Yarı geniş Katakana"
+
+#: src/skk.cpp:67 src/skk.h:40
+msgid "Hiragana"
+msgstr "Hiragana"
+
+#: src/skk.h:35
+msgid "Horizontal"
+msgstr "Yatay"
+
+#: src/skk.h:72
+msgid "Initial Input Mode"
+msgstr "Başlangıç Giriş Modu"
+
+#: src/skk.h:37
+msgid "Japanese"
+msgstr "Japonca"
+
+#: src/skk.cpp:68 src/skk.h:40
+msgid "Katakana"
+msgstr "Katakana"
+
+#: src/skk.cpp:70 src/skk.h:37 src/skk.h:41
+msgid "Latin"
+msgstr "Latin"
+
+#: src/skk.h:34
+msgid "Not set"
+msgstr ""
+
+#: src/skk.h:113
+msgid "Number candidate of Triggers To Show Candidate Window"
+msgstr "Aday Penceresini Gösteren Tetikleyicilerin Aday Sayısı"
+
+#: src/skk.h:74
+msgid "Page size"
+msgstr "Sayfa boyutu"
+
+#: src/skk.h:69
+msgid "Punctuation Style"
+msgstr "Noktalama İşareti Stili"
+
+#: src/skk.h:32
 msgid "Qwerty Center Row (a,s,d,...)"
 msgstr "Qwerty Orta Dizi (a,s,d,...)"
+
+#: src/skk.h:81
+msgid "Return-key does not insert new line on commit"
+msgstr "Dönüş anahtarı, tamamlandığında yeni satır eklemez"
+
+#: src/skk.h:67
+#, fuzzy
+msgid "Rule"
+msgstr "&Kural:"
+
+#: gui/adddictdialog.cpp:74 gui/adddictdialog.cpp:87
+msgid "Select Dictionary File"
+msgstr "Sözlük Dosyasını Seçin"
+
+#: gui/adddictdialog.cpp:24
+msgid "Server"
+msgstr "Sunucu"
+
+#: src/skk.h:82
+msgid "Show Annotation"
+msgstr "Açıklamayı Göster"
+
+#: src/skk.conf.in:3 src/skk-addon.conf.in:3
+msgid "Skk"
+msgstr "Skk"
+
+#: src/skk-addon.conf.in:4
+msgid "Skk Input Method For Fcitx"
+msgstr "Fcitx için Skk Giriş Yöntemi"
+
+#: gui/adddictdialog.cpp:22
+msgid "System"
+msgstr "Sistem"
+
+#: gui/adddictdialog.cpp:23
+msgid "User"
+msgstr "Kullanıcı"
+
+#: src/skk.h:35
+msgid "Vertical"
+msgstr "Dikey"
+
+#: src/skk.cpp:71 src/skk.h:38 src/skk.h:42
+msgid "Wide latin"
+msgstr "Geniş latin"
+
+#: src/skk.h:38
+msgid "Wide latin Japanese"
+msgstr "Geniş latin Japonca"
+
+#. i18n: file: gui/adddictdialog.ui:103
+#. i18n: ectx: property (text), widget (QLineEdit, hostLineEdit)
+#: rc.cpp:18
+#, kde-format
+msgid "localhost"
+msgstr ""
+
+#~ msgid "Input Mode"
+#~ msgstr "Giriş Yöntemi"
+
+#~ msgid "Dictionary and Rule"
+#~ msgstr "Sözlük ve Kural"
+
+#~ msgid "General"
+#~ msgstr "Genel"
+
+#~ msgid "Global"
+#~ msgstr "Küresel"
+
+#~ msgid "Keys to Select from Candidate Window"
+#~ msgstr "Aday Pencereden Seçilecek Tuşlar"
